Correction :  -> Alignement des input sur IE

--- a/public_html/styles/css/main.css
+++ b/public_html/styles/css/main.css
@@ -2663,6 +2663,7 @@ span[class^=icon-] {
 .input-white {
   font-size: 15pt;
   font-weight: 600;
+  height: 45px;
   margin-top: 5px;
   color: #818181;
   border: 2px solid #c5c5c5;
@@ -3600,7 +3601,7 @@ footer {
     border-bottom: 1px solid #004994; }
   .white-pannel input {
     width: 100%;
-    height: 35px;
+    height: 45px;
     padding-left: 5px;
     border: none;
     border-radius: 4px;
