--- a/public_html/styles/scss/_module.scss
+++ b/public_html/styles/scss/_module.scss
@@ -625,7 +625,7 @@ span[class^=icon-]
 {
     font-size: 15pt;
     font-weight: 600;
-
+    height: 45px;
     margin-top: 5px;
 
     color: $dark-grey;
@@ -1666,7 +1666,7 @@ footer
     }
     input{
         width: 100%;
-        height: 35px;
+        height: 45px;
         padding-left: 5px;
         border: none;
         border-radius: 4px;
